<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mProfileFormViewModel"
            type="com.jewong.calcac.ui.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/calories_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintBottom_toTopOf="@id/option_container"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/mock_int_value" />

        <LinearLayout
            android:id="@+id/data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintTop_toBottomOf="@id/calories_text_view">

            <TextView
                android:id="@+id/carb_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/mock_int_value" />

            <TextView
                android:id="@+id/protein_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/mock_int_value" />

            <TextView
                android:id="@+id/fat_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                tools:text="@string/mock_int_value" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quick_options"
                android:textAlignment="center" />

            <com.jewong.calcac.view.JWTextInputLayout
                android:id="@+id/weight_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_hint"
                android:inputType="textCapWords"
                android:text="@={mProfileFormViewModel.mWeightInput}" />

            <com.jewong.calcac.view.JWDropDownInputLayout
                android:id="@+id/diet_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/diet_hint"
                android:text="@={mProfileFormViewModel.mDietInput}" />

            <com.jewong.calcac.view.JWDropDownInputLayout
                android:id="@+id/weight_goal_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_goal_hint"
                android:text="@={mProfileFormViewModel.mWeightGoalInput}" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
